fix(styles): make body vertical stretch more generic

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -3,6 +3,6 @@ body {
   flex-direction: column;
 }
 
-main {
+body > * {
   flex-grow: 1;
 }
